change spring framework build md